--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "b": "tsc",
-    "d": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts"
   },
   "author": "Daniel Urdaneta, Leonardo Rincón",
   "license": "ISC",
@@ -15,13 +15,17 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
-    "typescript": "^4.3.4"
+    "multer": "^1.4.2",
+    "typescript": "^4.3.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.6",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6"
   }
 }
