--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "trim-newlines": "^4.0.2",
     "typescript": "^4.3.4",
     "uuid": "^8.3.2"
   },
